cluster/observability/kube-prometheus-stack/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana
  namespace: observability
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: network
      sectionName: websecure
  hostnames:
    - grafana.internal.wat.sn
  rules:
    - backendRefs:
        - name: kube-prometheus-stack-grafana
          port: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: prometheus
  namespace: observability
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: network
      sectionName: websecure
  hostnames:
    - prometheus.internal.wat.sn
  rules:
    - backendRefs:
        - name: kube-prometheus-stack-prometheus
          port: 9090
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: alertmanager
  namespace: observability
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: network
      sectionName: websecure
  hostnames:
    - alertmanager.internal.wat.sn
  rules:
    - backendRefs:
        - name: kube-prometheus-stack-alertmanager
          port: 9093
